@@ -1,3 +1,10 @@
+1997-12-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Schedule.m (_check_external_activity): Check to make sure
+	that the schedule associated with non-current activity 
+	is still within same activity hierarchy.
+	Minor reformatting.
+
 1997-11-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* XActivity.m ([Activity_c -_run_]): Do not advance to next action
